--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Understanding TypeScript</title>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=<YOUR API KE GOES HERE>"
+      async
+      defer
+    ></script>
+    <script src="dist/bundle.js" defer></script>
+    <link rel="stylesheet" href="app.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="map">
+      <p>Please enter an address!</p>
+    </div>
+    <form>
+      <input type="text" id="address" />
+      <button type="submit">SEARCH ADDRESS</button>
+    </form>
+  </body>
 </html>
