--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Understanding TypeScript</title>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=<YOUR API KE GOES HERE>"
+      src="https://maps.googleapis.com/maps/api/js?key=<YOUR API KEY GOES HERE>"
       async
       defer
     ></script>
